@@ -1,3 +1,10 @@
+2008-02-18  Milan Crha  <mcrha@redhat.com>
+
+	** Part of fix for bug #515744
+
+	* camel/camel-exchange-summary.c: (exchange_summary_class_init),
+	(message_info_free): Free our message info members properly.
+
 2008-02-16  Srinivasa Ragavan  <sragavan@novell.com>
 
 	** Fix for bug #516248
